# pytest-expect

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
pytest_expect/: __init__.py  expectations.py  matchers.py  plugin.py
tests/: test_examples.py  test_expectations.py  test_matchers.py  test_plugin.py
