[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-expect"
version = "0.2.0"
description = "A pytest plugin for multiple expectations and soft assertions"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
keywords = ["pytest", "testing", "expectations", "soft assertions", "assertions"]
requires-python = ">=3.8"
dependencies = [
    "pytest>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.390",
]

[project.urls]
Homepage = "https://github.com/yourusername/pytest-expect"
Documentation = "https://github.com/yourusername/pytest-expect#readme"
Repository = "https://github.com/yourusername/pytest-expect"
"Bug Tracker" = "https://github.com/yourusername/pytest-expect/issues"

[project.entry-points.pytest11]
expect = "pytest_expect.plugin"

[tool.hatch.build.targets.wheel]
packages = ["pytest_expect"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false
reportMissingParameterType = "warning"
include = ["pytest_expect"]
exclude = ["**/__pycache__", ".git", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
